2007-10-08  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/CandlestickRenderer.java
	(volumePaint): New field,
	(CandlestickRenderer(double, boolean, XYToolTipGenerator)): Initialise new 
	field,
	(getVolumePaint): New method,
	(setVolumePaint): Likewise,
	(drawItem): Use new paint attribute,
	(equals): Add check for new field,
	(writeObject): Handle serialization for new field,
	(readObject): Likewise,
	* tests/org/jfree/chart/renderer/xy/junit/CandlestickRendererTests.java
	(EPSILON): New field,
	(testConstructor): New method,
	(testEquals): Added check for new field.

2007-10-05  David Gilbert  <david.gilbert@object-refinery.com>

	Based on patch 1805262 by Alex Moots:
	* source/org/jfree/chart/plot/PiePlot3D.java
	(darkerSides): New field,
	(getDarkerSides): New method,
	(setDarkerSides): Likewise,
	(drawSide): Make side colour darker if necessary,
	(equals): Updated for new field,
	* tests/org/jfree/chart/plot/junit/PiePlot3DTests.java
	(testEquals): Updated for new field.
	
2007-10-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/KeyedObjects2D.java
	(getRowIndex): Check for null argument,
	(getColumnIndex): Likewise,
	(removeObject): Check for unknown keys,
	(clear): New method,
	* source/org/jfree/data/statistics/DefaultBoxAndWhiskerCategoryDataset.java
	(rangeBounds): Removed,
	(DefaultBoxAndWhiskerCategoryDataset()): Updated for removed field,
	(add(BoxAndWhiskerItem, Comparable, Comparable)): Likewise,
	(remove(Comparable, Comparable)): New method,
	(removeRow(int)): Likewise,
	(removeRow(Comparable)): Likewise,
	(removeColumn(int)): Likewise,
	(removeColumn(Comparable)): Likewise,
	(clear): Likewise,
	(getRangeBounds): Return new instance every time,
	* source/org/jfree/data/statistics/DefaultStatisticalCategoryDataset.java
	(remove(Comparable, Comparable)): New method,
	(removeRow(int)): Likewise,
	(removeRow(Comparable)): Likewise,
	(removeColumn(int)): Likewise,