@@ -1,3 +1,11 @@
+2007-10-08	David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/plot/ValueMarker.java
+	(ValueMarker(double, Paint, Stroke, Paint, Stroke, float)): Fixed call
+	to super,
+	* tests/org/jfree/chart/plot/junit/ValueMarkerTests.java
+	(test1808376): New test method.
+
 2007-10-08  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/renderer/xy/CandlestickRenderer.java
